--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tarefas & Mesada - Gestão familiar inteligente</title>
+    <title>Tarefas & Mesada - Gestão inteligente</title>
     <meta name="description" content="App para famílias organizarem tarefas, mesadas e recompensas. Ensine responsabilidade financeira de forma divertida e organizada." />
     <meta name="author" content="Tarefas & Mesada" />
     <meta name="theme-color" content="#0ea5e9" />
 
     <!-- SEO Meta Tags -->
-    <meta property="og:title" content="Tarefas & Mesada - Gestão familiar inteligente" />
+    <meta property="og:title" content="Tarefas & Mesada - Gestão inteligente" />
     <meta property="og:description" content="App para famílias organizarem tarefas, mesadas e recompensas. Ensine responsabilidade financeira de forma divertida." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/icon-512x512.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Tarefas & Mesada" />
-    <meta name="twitter:description" content="Gestão familiar inteligente de tarefas e mesadas" />
+    <meta name="twitter:description" content="Gestão inteligente de tarefas e mesadas" />
     <meta name="twitter:image" content="/icon-512x512.png" />
 
     <!-- PWA Meta Tags -->
